Add styles for the header

--- a/simple_page/styles/index.scss
+++ b/simple_page/styles/index.scss
@@ -1,5 +1,6 @@
-.header {
-  &__links-wrapper {
-    font-size: 2em;
-  }
+@import "header";
+@import "stolen_from_bootstrap";
+
+body {
+  font-family: Arial, Helvetica, sans-serif;
 }
