--- a/simple_page/styles/index.scss
+++ b/simple_page/styles/index.scss
@@ -1,6 +1,8 @@
 @import "header";
 @import "stolen_from_bootstrap";
+@import "jumbo";
 
-body {
+* {
   font-family: Arial, Helvetica, sans-serif;
+  box-sizing: border-box;
 }
