Improve styling for header

--- a/simple_page/styles/_header.scss
+++ b/simple_page/styles/_header.scss
@@ -1,36 +1,30 @@
 .header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  font-size: 12px;
-
   &__logo {
     height: 30px;
-    width: auto;
   }
+}
 
-  &__navigation {
-    text-transform: uppercase;
-    display: flex;
-    flex: 0 0 54%;
-  }
+.navigation {
+  text-transform: uppercase;
+  display: flex;
+  flex: 0 0 54%;
 
   &__links-wrapper {
     display: flex;
     flex-grow: 1;
     justify-content: space-between;
+    margin-right: 45px;
+    list-style-type: none;
   }
-
-  &__link {
-    font-weight: bolder;
-  }
-
 
   &__icons-wrapper {
-    margin-left: 45px;
     display: flex;
     flex: 0 0 7%;
     justify-content: space-between;
     font-size: 14px;
+  }
+
+  &__link {
+    font-weight: bolder;
   }
 }
