--- a/simple_page/styles/_header.scss
+++ b/simple_page/styles/_header.scss
@@ -4,13 +4,13 @@
   }
 }
 
+// looks bad in small vw FIX on lvl2
 .navigation {
   text-transform: uppercase;
-  display: flex;
   flex: 0 0 54%;
+  color: white;
 
   &__links-wrapper {
-    display: flex;
     flex-grow: 1;
     justify-content: space-between;
     margin-right: 45px;
@@ -18,7 +18,6 @@
   }
 
   &__icons-wrapper {
-    display: flex;
     flex: 0 0 7%;
     justify-content: space-between;
     font-size: 14px;
