--- a/simple_page/styles/_jumbo.scss
+++ b/simple_page/styles/_jumbo.scss
@@ -10,6 +10,13 @@
     width: 350px;
   }
 
+  &__text {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+  }
+
   &__title {
     width: 300px;
   }
